--- a/src/views/user/main.ejs
+++ b/src/views/user/main.ejs
@@ -12,7 +12,7 @@
                                 <img src="../images/pngocean.com-id-wdafi.png" alt="">
                             </div>
                             <div class="imgButton">
-                                <a class="btn btn-outline-light mt-auto" href="">Consultar por cancha</a>
+                                <a class="btn btn-outline-light mt-auto" href="/reserva">Consultar por cancha</a>
                             </div>
                         </div>
                     </td>
