--- a/src/views/partials/_navigation.ejs
+++ b/src/views/partials/_navigation.ejs
@@ -16,7 +16,7 @@
                     <a class="nav-link" href="main">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Reservas</a>
+                    <a class="nav-link" href="#">Historial</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Canchas</a>
@@ -34,43 +34,15 @@
                         <%= user.nombre_usuario  %> <span class="caret"></span>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="../profile"><i class="fas fa-address-card"></i> Editar informacion</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href=../logout><i class="fas fa-sign-out-alt"></i> Desconectarse</a>
+                        <% if(user) { %>
+                            <% if(user.tipo_cuenta == 'Admin') { %>
+                                <a class="dropdown-item" href="../admin"><i class="fas fa-cogs"></i> Administracion</a>
+                                <%} %>
+                                    <a class="dropdown-item" href="../profile"><i class="fas fa-address-card"></i> Editar informacion</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href=../logout><i class="fas fa-sign-out-alt"></i> Desconectarse</a>
+                                    <%} %>
                     </div>
                 </li>
         </div>
     </nav>
-    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <img src="../images/logo.png" width="75" height="75" alt="">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link">
-                    <font size="+2">Reserva de canchas</font>
-                </a>
-            </li>
-        </ul>
-        <ul class="nav navbar-nav navbar-center">
-            <li class="nav-item">
-                <a class="nav-link" href="cart"><i class="fas fa-shopping-cart"></i> Carro de compras</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-user-cog"></i> Gestión <span class="caret"></span>
-                </a>
-                <div class="dropdown-menu dropdown-menu-right">
-                    <a class="dropdown-item" href="../profile"><i class="fas fa-address-card"></i> Perfil</a>
-                    <a class="dropdown-item" href="../add"><i class="fas fa-address-card"></i> Agregar producto</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href=../logout><i class="fas fa-sign-out-alt"></i> Desconectarse</a>
-                    <a class="dropdown-item" href="../signup"><i class="fas fa-user-plus"></i> Registrarse</a>
-                    <a class="dropdown-item" href="../login"><i class="fas fa-sign-in-alt"></i> Iniciar Sesión</a>
-                </div>
-            </li>
-        </ul>
-    </div>
-</nav> -->
