--- a/src/views/admin/schedAdd.ejs
+++ b/src/views/admin/schedAdd.ejs
@@ -8,13 +8,13 @@
                         <div class="col-md-6">
                             <div class="form-label-group">
                                 <input type="text" name="hora_inicio" id="inputHora_inicio" class="form-control" placeholder="Hora inicio" required autofocus>
-                                <label for="inputHora_inicio">Hora Inicio</label>
+                                <label for="inputHora_inicio">Hora Inicio (Ej. 12:30:00)</label>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-label-group">
                                 <input type="text" name="hora_termino" id="inputHora_termino" class="form-control" placeholder="Hora termino" required autofocus>
-                                <label for="inputHora_termino">Hora termino</label>
+                                <label for="inputHora_termino">Hora termino (Ej. 12:30:00)</label>
                             </div>
                             <button class="btnRegister">Añadir horario</button>
                         </div>
