--- a/src/views/partials/_navigation.ejs
+++ b/src/views/partials/_navigation.ejs
@@ -13,7 +13,7 @@
         <div class="navbar-collapse collapse w-100 order-0 dual-collapse2">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="main">Inicio</a>
+                    <a class="nav-link" href="/main">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Historial</a>
