--- a/src/views/reserva/reserva.ejs
+++ b/src/views/reserva/reserva.ejs
@@ -6,11 +6,45 @@
                     <img src="../images/pngocean.com-id-wdafi.png" alt="">
                 </div>
             </div>
-            <div id="div"></div>
+            <form action="/reserva" method="POST">
+            <div>
+                <div class="flow-element">
+                    <input type="text" name="fecha" id="datepicker">
+                    <div id="dateContainer"></div>
+                </div>
+            </div>
+            <div class="rows">
+                <div class="columns">
+                    <div class="cards">
+                        <h3>Deporte</h3>
+                        <select name="deporte">
+                            <option value="Fútbol">Futbol</option>
+                            <option value="basketBall">Basketball</option>
+                            <option value="Tenis">Tenis</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <button class="btnCons btn btn-light">Consultar</button>
+            </form>
+            
+            
             <script>
-                $(function() {
-                    $('#div').datepicker({
-                        language: "es"
+                 var picker = new Pikaday({
+                    field: document.getElementById('datepicker'),
+                    firstDay: 1,
+                    minDate: new Date(),
+                    format: 'YYYY-MM-DD',
+                    bound: false,
+                    container: document.getElementById('dateContainer')
+                });
+
+                $(document).ready(function () {
+                    $('#dataTable').DataTable({
+                        "searching": false,
+                        "ordering": false,
+                        "lengthChange": false,
+                        "info": false
                     });
                 });
             </script>
