--- a/client/src/app/components/admin/fields/fields-list/fields-list.component.html
+++ b/client/src/app/components/admin/fields/fields-list/fields-list.component.html
@@ -1,38 +1,57 @@
 <app-admin></app-admin>
+<ng-template #content let-c="close" let-d="dismiss">
+    <div class="modal-header">
+        <h4 class="modal-title">Borrar cancha</h4>
+        <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <p><strong>¿Estás seguro que quieres continuar?</strong></p>
+        <p>Toda la información asociada a esta cancha será borrada permanentemente.
+        <span class="text-danger">Está operacion no se puede deshacer.</span>
+        </p>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-outline-secondary" (click)="d('Cancel click')">Cancelar</button>
+        <button type="button" class="btn btn-danger" ngbAutofocus (click)="deleteField(id); c('Ok click')">Ok</button>
+    </div>
+</ng-template>
+
 <div class="page-wrapper chiller-theme toggled">
     <main class="page-content">
         <div>
-            <div class="card-header bg-dark text-white" style="height: 10%">
+            <div class="card-header bg-dark text-white">
                 <div class="text-center" style="width: 50%; position: absolute; margin-left: 3cm;" >
                     <flash-messages></flash-messages>
                 </div>
                 <i class="fas fa-futbol"></i> Canchas
-                <a routerLink="/admin/fields/add" class="btn btn-success" style="float: right;">Añadir nuevo</a>
+                <a routerLink="/admin/fields/add" class="btn btn-outline-light" style="margin-top: -6px; float: right;">Añadir nuevo</a>
             </div>
             <div class="card-body">
                 <div class="table-responsive">
-                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                    <table class="table table-striped" width="100%" cellspacing="0">
                         <thead>
                             <tr>
-                                <th>ID</th>
-                                <th>Deporte</th>
-                                <th>Precio base</th>
-                                <th colspan="2" style="text-align:center;">Acciones</th>
+                                <th scope="col">ID</th>
+                                <th scope="col">Deporte</th>
+                                <th scope="col">Precio base</th>
+                                <th scope="col" colspan="2" style="text-align:center;">Acciones</th>
                             </tr>
                         </thead>
                         <tfoot>
                             <tr>
-                                <th>ID</th>
-                                <th>Deporte</th>
-                                <th>Precio base</th>
-                                <th colspan="2" style="text-align:center;">Acciones</th>
+                                <th scope="col">ID</th>
+                                <th scope="col">Deporte</th>
+                                <th scope="col">Precio base</th>
+                                <th scope="col" colspan="2" style="text-align:center;">Acciones</th>
                             </tr>
                         </tfoot>
-                        <tbody *ngFor="let field of fields">
-                            <tr>
-                                <td>
+                        <tbody>
+                            <tr *ngFor="let field of fields">
+                                <th>
                                     {{field.id}}    
-                                </td>
+                                </th>
                                 <td>
                                     {{field.deporte}} 
                                 </td>
@@ -43,7 +62,7 @@
                                     <button [routerLink]="['edit', field.id]" style="color: blue; border: white; background-color: transparent;"><i class="fas fa-pencil-alt"></i></button>
                                 </td>
                                 <td align="Center">
-                                    <button style="color: red; border: white; background-color: transparent;" (click)="deleteField(field.id)"><i class="fas fa-trash-alt"></i></button>
+                                    <button style="color: red; border: white; background-color: transparent;" (click)="openModal(content, field.id)"><i class="fas fa-trash-alt"></i></button>
                                 </td>
                             </tr>
                         </tbody>
