--- a/client/src/app/components/admin/referees/referees-form/referees-form.component.html
+++ b/client/src/app/components/admin/referees/referees-form/referees-form.component.html
@@ -14,7 +14,7 @@
                             <label for="inputNombre">Nombre Completo</label>
                         </div>
                         <div class="form-group input-group">
-                            <input type="tel" [(ngModel)]="referee.rut" name="rut" minlength="9" maxlength="9" class="form-control" placeholder="Rut" required/>
+                            <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '').replace(/(\..*)\./g, '$1');" [(ngModel)]="referee.rut" name="rut" minlength="8" maxlength="8" class="form-control" placeholder="Rut" required/>
                         </div>
                         <div class="form-label-group">
                             <input type="email" [(ngModel)]="referee.correo" name="correo" id="inputCorreo" class="form-control" placeholder="Correo" required>
@@ -24,7 +24,7 @@
                     <div class="col-md-6">
                         <div class="form-group input-group">
                             <input type="text" class="form-control" value="+569" style="max-width: 65px;" readonly>
-                            <input type="tel" [(ngModel)]="referee.nro_contacto" name="nro_contacto" class="form-control" placeholder="Telefono" minlength="8" maxlength="8" required>
+                            <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '').replace(/(\..*)\./g, '$1');" [(ngModel)]="referee.nro_contacto" name="nro_contacto" class="form-control" placeholder="Telefono" minlength="8" maxlength="8" required>
                         </div>
                         <div class="form-label-group">
                             <input type="text" [(ngModel)]="referee.deporte" name="deporte" id="inputDeporte" class="form-control" placeholder="Deporte" required>
