--- a/client/src/app/components/admin/scheds/scheds-list/scheds-list.component.html
+++ b/client/src/app/components/admin/scheds/scheds-list/scheds-list.component.html
@@ -1,37 +1,56 @@
 <app-admin></app-admin>
+<ng-template #content let-c="close" let-d="dismiss">
+    <div class="modal-header">
+        <h4 class="modal-title">Borrar horario</h4>
+        <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <p><strong>¿Estás seguro que quieres continuar?</strong></p>
+        <p>Toda la información asociada a este horario será borrada permanentemente.
+        <span class="text-danger">Está operacion no se puede deshacer.</span>
+        </p>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-outline-secondary" (click)="d('Cancel click')">Cancelar</button>
+        <button type="button" class="btn btn-danger" ngbAutofocus (click)="deleteSched(id); c('Ok click')">Ok</button>
+    </div>
+</ng-template>
+
 <div class="page-wrapper chiller-theme toggled">
     <main class="page-content">
         <div>
-            <div class="card-header bg-dark text-white" style="height: 10%">
+            <div class="card-header bg-dark text-white">
                 <div class="text-center" style="width: 50%; position: absolute; margin-left: 3cm;" >
                     <flash-messages></flash-messages>
                 </div>
                 <i class="fas fa-calendar-alt"></i> Horarios
-                <a routerLink ="/admin/scheds/add" class="btn btn-success" style="float: right;">Añadir nuevo</a></div>
+                <a routerLink ="/admin/scheds/add" class="btn btn-outline-light" style="margin-top: -6px;float: right;">Añadir nuevo</a></div>
             <div class="card-body">
                 <div class="table-responsive">
-                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                    <table class="table table-striped" width="100%" cellspacing="0">
                         <thead>
                             <tr>
-                                <th>ID</th>
-                                <th>Hora inicio</th>
-                                <th>Hora termino</th>
-                                <th colspan="2">Acciones</th>
+                                <th scope="col">ID</th>
+                                <th scope="col">Hora inicio</th>
+                                <th scope="col">Hora termino</th>
+                                <th scope="col" colspan="2" style="text-align:center;">Acciones</th>
                             </tr>
                         </thead>
                         <tfoot>
                             <tr>
-                                <th>ID</th>
-                                <th>Hora inicio</th>
-                                <th>Hora termino</th>
-                                <th colspan="2">Acciones</th>
+                                <th scope="col">ID</th>
+                                <th scope="col">Hora inicio</th>
+                                <th scope="col">Hora termino</th>
+                                <th scope="col" colspan="2" style="text-align:center;">Acciones</th>
                             </tr>
                         </tfoot>
-                        <tbody *ngFor="let sched of scheds">
-                            <tr>
-                                <td>
+                        <tbody>
+                            <tr *ngFor="let sched of scheds">
+                                <th>
                                     {{sched.id_horario}}
-                                </td>
+                                </th>
                                 <td>
                                     {{sched.hora_inicio}}
                                 </td>
@@ -42,7 +61,7 @@
                                     <button [routerLink]="['edit', sched.id_horario]" style="color: blue; border: white; background-color: transparent;"><i class="fas fa-pencil-alt"></i></button>
                                 </td>
                                 <td align="Center">
-                                    <button style="color: red; border: white; background-color: transparent;" (click)="deleteSched(sched.id_horario)"><i class="fas fa-trash-alt"></i></button>
+                                    <button style="color: red; border: white; background-color: transparent;" (click)="openModal(content, sched.id_horario)"><i class="fas fa-trash-alt"></i></button>
                                 </td>
                             </tr>
                         </tbody>
