--- a/client/src/app/components/admin/users/user-form/user-form.component.html
+++ b/client/src/app/components/admin/users/user-form/user-form.component.html
@@ -19,7 +19,7 @@
                         </div>
                         <div class="form-group input-group">
                             <input type="text" class="form-control" value="+569" style="max-width: 65px;" readonly>
-                            <input type="tel" [(ngModel)]="user.telefono" name="telefono" class="form-control" placeholder="Telefono" minlength="8" maxlength="8" required>
+                            <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '').replace(/(\..*)\./g, '$1');" [(ngModel)]="user.telefono" name="telefono" class="form-control" placeholder="Telefono" minlength="8" maxlength="8" required>
                         </div>
                         <div class="form-label-group">
                             <input type="email" [(ngModel)]="user.correo" name="correo" id="inputCorreo" class="form-control" placeholder="Correo" required>
@@ -28,7 +28,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="form-group input-group">
-                            <input type="tel" [(ngModel)]="user.rut" name="rut" minlength="8" maxlength="8" class="form-control" placeholder="Rut" required/>
+                            <input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '').replace(/(\..*)\./g, '$1');" [(ngModel)]="user.rut" name="rut" minlength="8" maxlength="8" class="form-control" placeholder="Rut" required/>
                             <input type="text" [(ngModel)]="user.dV" name="dV" minlength="1" maxlength="1" class="form-control" style="max-width: 65px;" placeholder="DV" required/>
                         </div>
                         <div class="form-label-group">
