--- a/client/src/app/components/admin/users/user-list/user-list.component.html
+++ b/client/src/app/components/admin/users/user-list/user-list.component.html
@@ -1,4 +1,23 @@
 <app-admin></app-admin>
+<ng-template #content let-c="close" let-d="dismiss">
+    <div class="modal-header">
+        <h4 class="modal-title">Borrar usuario</h4>
+        <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <p><strong>¿Estás seguro que quieres continuar?</strong></p>
+        <p>Toda la información asociada a este usuario será borrada permanentemente.
+        <span class="text-danger">Está operacion no se puede deshacer.</span>
+        </p>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-outline-secondary" (click)="d('Cancel click')">Cancelar</button>
+        <button type="button" class="btn btn-danger" ngbAutofocus (click)="deleteUser(id); c('Ok click')">Ok</button>
+    </div>
+</ng-template>
+
 <div class="page-wrapper chiller-theme toggled">
     <main class="page-content">
         <div>
@@ -10,33 +29,33 @@
             </div>
             <div class="card-body">
                 <div class="table-responsive">
-                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                    <table class="table table-striped" width="100%" cellspacing="0">
                         <thead>
                             <tr>
                                 <th>Nombre</th>
-                                <th>Nombre Usuario</th>
-                                <th>Rut</th>
-                                <th>Correo</th>
-                                <th>Telefono</th>
-                                <th>Direccion</th>
-                                <th>Tipo Cuenta</th>
-                                <th colspan="2" style="text-align:center;">Acciones</th>                                    
+                                <th scope="col">Nombre Usuario</th>
+                                <th scope="col">Rut</th>
+                                <th scope="col">Correo</th>
+                                <th scope="col">Telefono</th>
+                                <th scope="col">Direccion</th>
+                                <th scope="col">Tipo Cuenta</th>
+                                <th scope="col" colspan="2" style="text-align:center;">Acciones</th>
                             </tr>
                         </thead>
                         <tfoot>
                             <tr>
-                                <th>Nombre</th>
-                                <th>Nombre Usuario</th>
-                                <th>Rut</th>
-                                <th>Correo</th>
-                                <th>Telefono</th>
-                                <th>Direccion</th>
-                                <th>Tipo Cuenta</th>
-                                <th colspan="2" style="text-align:center;">Acciones</th>
+                                <th scope="col">Nombre</th>
+                                <th scope="col">Nombre Usuario</th>
+                                <th scope="col">Rut</th>
+                                <th scope="col">Correo</th>
+                                <th scope="col">Telefono</th>
+                                <th scope="col">Direccion</th>
+                                <th scope="col">Tipo Cuenta</th>
+                                <th scope="col" colspan="2" style="text-align:center;">Acciones</th>
                             </tr>
                         </tfoot>
-                        <tbody *ngFor="let user of users">
-                            <tr>
+                        <tbody>
+                            <tr *ngFor="let user of users">
                                 <td>
                                     {{user.nombre}}
                                 </td>
@@ -62,7 +81,7 @@
                                     <button [routerLink]="['edit', user.id_usuario]" style="color: blue; border: white; background-color: transparent;"><i class="fas fa-pencil-alt"></i></button>
                                 </td>
                                 <td align="Center">
-                                    <button style="color: red; border: white; background-color: transparent;" (click)="deleteUser(user.id_usuario)"><i class="fas fa-trash-alt"></i></button>
+                                    <button style="color: red; border: white; background-color: transparent;" (click)="openModal(content, user.id_usuario)"><i class="fas fa-trash-alt"></i></button>
                                 </td>
                             </tr>
                         </tbody>
