--- a/client/src/app/components/user/home/home.component.html
+++ b/client/src/app/components/user/home/home.component.html
@@ -9,7 +9,7 @@
                         <img src="../../../../assets/pngocean.com-id-wdafi.png" alt="">
                     </div>
                     <div class="imgButton">
-                        <a title="aaa" class="btn btn-outline-light mt-auto" routerLink="/reservation">Consultar por cancha</a>
+                        <a class="btn btn-outline-light mt-auto" routerLink="/reservation">Consultar por cancha</a>
                     </div>
                 </div>
             </td>
