--- a/client/src/app/components/admin/fields/fields-list/fields-list.component.html
+++ b/client/src/app/components/admin/fields/fields-list/fields-list.component.html
@@ -30,7 +30,7 @@
             </div>
             <div class="card-body">
                 <div class="table-responsive">
-                    <table class="table table-striped" width="100%" cellspacing="0">
+                    <table class="table table-striped">
                         <thead>
                             <tr>
                                 <th scope="col">ID</th>
