--- a/client/src/app/components/admin/scheds/scheds-list/scheds-list.component.html
+++ b/client/src/app/components/admin/scheds/scheds-list/scheds-list.component.html
@@ -29,7 +29,7 @@
                 <a routerLink ="/admin/scheds/add" class="btn btn-outline-light" style="margin-top: -6px;float: right;">Añadir nuevo</a></div>
             <div class="card-body">
                 <div class="table-responsive">
-                    <table class="table table-striped" width="100%" cellspacing="0">
+                    <table class="table table-striped">
                         <thead>
                             <tr>
                                 <th scope="col">ID</th>
