--- a/client/src/app/components/admin/users/user-list/user-list.component.html
+++ b/client/src/app/components/admin/users/user-list/user-list.component.html
@@ -29,10 +29,10 @@
             </div>
             <div class="card-body">
                 <div class="table-responsive">
-                    <table class="table table-striped" width="100%" cellspacing="0">
+                    <table class="table table-striped">
                         <thead>
                             <tr>
-                                <th>Nombre</th>
+                                <th scope="col">Nombre</th>
                                 <th scope="col">Nombre Usuario</th>
                                 <th scope="col">Rut</th>
                                 <th scope="col">Correo</th>
