--- a/client/src/app/components/partials/admin/admin.component.html
+++ b/client/src/app/components/partials/admin/admin.component.html
@@ -12,7 +12,7 @@
                     </span>
                 </div>
             </div>
-            <!-- sidebar-header  -->
+            <!-- sidebar-header 
             <div class="sidebar-search">
                 <div>
                     <div class="input-group">
@@ -23,7 +23,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- sidebar-search  -->
             <div class="sidebar-menu">
                 <ul>
